--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,24 @@ body {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  margin: 1rem;
+  padding: 1rem;
+  position: relative;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  &-title {
+    .description {
+      font-weight: 300;
+    }
+  }
+  &-body {
+    margin: 20px 0;
+    .description {
+      font-weight: 300;
+    }
+  }
+
+}
