--- a/src/app/core/people/people-list/people-list.component.html
+++ b/src/app/core/people/people-list/people-list.component.html
@@ -1,36 +1,22 @@
-<table>
-  <thead>
-    <th>Name</th>
-    <th>Gender</th>
-    <th>Year of Birth</th>
-    <th>Height</th>
-    <th>Mass</th>
-    <th>No. of Participations</th>
-    <th></th>
-  </thead>
-  <tbody>
-    <tr *ngFor="let people of peoples">
-      <td>
-        {{ people.name }}
-      </td>
+<div class="card" *ngFor="let people of peoples">
+  <div class="card-title">
+    <h1>{{ people.name }}</h1>
+    <span class="description">Gender: {{ people.gender }}</span>
+  </div>
+  <div class="card-body">
+    <p class="card-description">
+      <strong>Year of Birth:</strong> {{ people.birth_year }}
+    </p>
+    <p class="card-description"><strong>Height:</strong> {{ people.height }}</p>
+    <p class="card-description"><strong>Mass:</strong>{{ people.mass }}</p>
 
-      <td>
-        {{ people.gender }}
-      </td>
-
-      <td>
-        {{ people.birth_year }}
-      </td>
-      <td>
-        {{ people.height }}
-      </td>
-      <td>
-        {{ people.mass }}
-      </td>
-      <td>
-        {{ people.films.length }}
-      </td>
-      <td (click)="goToDetails(people)">Details</td>
-    </tr>
-  </tbody>
-</table>
+    <h3>Films where person appears:</h3>
+    <div class="cards">
+      <div *ngFor="let film of people.films" class="card">
+        <p (click)="goToDetails('films', film)">
+          <strong>Film: </strong> {{ getFilmName(film) }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
