--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic';
 
+$yellow: #FFE81F;
+$black: #000;
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -17,6 +20,7 @@ body {
   position: relative;
   min-height: 100%;
   height: 100%;
+  background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
 }
 
 html {
@@ -37,7 +41,7 @@ body {
   line-height: 2rem;
   letter-spacing: 0.01rem;
   color: #212121;
-  background-color: #f5f5f5;
+  background-color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -52,14 +56,17 @@ body {
 }
 
 .card {
-  background: #fff;
+  border: #FFE81F solid 1px;
+  color: white;
   border-radius: 2px;
   display: inline-block;
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 1rem;
   position: relative;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  min-width: 100%;
   &-title {
+    color: $yellow;
     .description {
       font-weight: 300;
     }
@@ -71,4 +78,34 @@ body {
     }
   }
 
+  @media screen and (min-width: 60em) {
+    min-width: 60em;
+  }
+}
+
+.centered {
+  margin: 0 auto;
+  padding: 0 1em;
+}
+
+@media screen and (min-width: 60em) {
+  .centered {
+    max-width: 60em;
+  }
+}
+
+ul {
+  list-style: none;
+  display: inline-block;
+  li {
+    &:hover{
+      cursor: pointer;
+      color: $yellow;
+      font-weight: 500;
+    }
+  }
+}
+
+strong, h3 {
+  color: $yellow;
 }
