--- a/src/app/shared/card-list/card-list.component.html
+++ b/src/app/shared/card-list/card-list.component.html
@@ -1,6 +1,9 @@
 <h2>{{ title }}:</h2>
 <div class="cards">
-  <div *ngFor="let item of items" class="card">
+  <div
+    *ngFor="let item of items"
+    class="card"
+  >
     <svg
       class="svg-redirect"
       (click)="goToDetails(item.id)"
