--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .card {
-  border: #ffe81f solid 1px;
+  border: $yellow solid 1px;
   color: white;
   border-radius: 2px;
   display: inline-block;
@@ -96,7 +96,9 @@ body {
 
 ul {
   list-style: none;
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   li {
     &:hover {
       cursor: pointer;
@@ -116,4 +118,33 @@ h3 {
   position: absolute;
   right: 10px;
   cursor: pointer;
+}
+
+.ngx-pagination {
+  padding-left: 0px !important;
+  .pagination-previous,
+  a,
+  li {
+    color: $yellow !important;
+  }
+  .pagination-previous:hover,
+  a:hover,
+  li:hover {
+    color: $black !important;
+    background: $yellow !important;
+  }
+  .current {
+    border: transparent !important;
+    border-radius: 20px !important;
+  }
+}
+
+.ngx-pagination .current {
+  color: $black !important;
+  background: $yellow !important;
+  &:hover {
+    background: $yellow !important;
+    border-radius: 20px !important;
+    border: transparent !important;
+  }
 }
