--- a/src/app/shared/card-list/card-list.component.html
+++ b/src/app/shared/card-list/card-list.component.html
@@ -1,6 +1,6 @@
 <h2>{{ title }}:</h2>
 <div class="cards">
-  <div class="card" *ngIf="items.length === 0">
+  <div class="card" *ngIf="items && items.length === 0">
     <strong>None</strong>
   </div>
   <div *ngFor="let item of items" class="card">
