Adição de filtros e menu de navegação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,29 @@
+<div class="centered">
+  <div class="routes">
+    <a class="route" [routerLink]="['/people/list']" routerLinkActive="active">
+      Characters
+    </a>
+
+    <a class="route" [routerLink]="['/films/list']" routerLinkActive="active">
+      Films
+    </a>
+
+    <a class="route" [routerLink]="['/planets/list']" routerLinkActive="active">
+      Planets
+    </a>
+
+    <a class="route" [routerLink]="['/species/list']" routerLinkActive="active">
+      Species
+    </a>
+
+    <a class="route" [routerLink]="['/vehicles/list']" routerLinkActive="active">
+      Vehicles
+    </a>
+
+    <a class="route" [routerLink]="['/starships/list']" routerLinkActive="active">
+      Starships
+    </a>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
